--- a/views/default/statistics.html
+++ b/views/default/statistics.html
@@ -6,7 +6,7 @@
         {{story_points += i.story_points}}
         {{pass}}
     {{pass}}
-    // OBS: other global variables are generated on the page project
+    // Global variables
     var txt = {
         stories : '{{=T("Stories Points")}}',
         burndow_chart : '{{=T("Burndown Chart")}}',
