--- a/views/default/team.html
+++ b/views/default/team.html
@@ -1,6 +1,6 @@
 {{extend 'default/layout_base.html'}}
 <script>
-    // OBS: other global variables are generated on the page project
+    // global variables
     var url = {
         get_persons : '{{=URL("get_persons_add.json", vars={"project_id": request.args(0)})}}',
         add_member : '{{=URL(f="add_member", vars={"project_id": request.args(0)})}}',
@@ -37,37 +37,40 @@
         {{pass}}
     </div>
 </div>
-<hr />
 <div class="container-fluid">
-    <div class="row-fluid">
-        <div class="span5">
+    <div class="span5">
         <h2>{{=T('Members')}}:</h2>
-        <ul>
             {{if team_members:}}
                 {{ for member in team_members: }}
-                <li>{{=member.person_id.name}} - <span {{if owner_project:}} style="cursor:pointer" class="edit_role"{{pass}}>{{if member.role_id:}}{{=member.role_id.name}}{{else:}}{{=T("Define role")}}{{pass}}</span> {{if owner_project:}}<button data-member="{{=member.person_id}}" class=" remove_member btn btn-danger btn-mini">{{=T("remove")}}</button>{{pass}}
-                </li>
-                <form style="display:none; background-color:#ccc; border-radius:5px;">
-                    <label>
-                        <strong>{{=T("Manage User")}}</strong><br />
-                        {{=T("What role this person will perform in the project?")}}
-                    </label>
-                    {{ for role in roles: }}
-                        {{ if member.role_id:}}
-                            <input type="radio" name="{{=member.person_id}}" value="{{=role.id}}"
-                                {{if member.role_id.name == role.name:}}checked="checked"{{pass}}    
-                            >{{=role.name}}<br />
-                        {{else:}}
-                            <input type="radio" name="{{=member.person_id}}" value="{{=role.id}}" >{{=role.name}}<br />
+                <ul id="team_container">
+                    <li>{{=member.person_id.name}}</li>
+                    <li>
+                        <button class="btn btn-primary btn-mini {{if owner_project:}}edit_role"{{pass}} style="cursor:pointer">{{if member.role_id:}}{{=member.role_id.name}}{{else:}}{{=T("Define role")}}{{pass}}</button>
+                        {{if owner_project:}}
+                        <button data-member="{{=member.person_id}}" class=" remove_member btn btn-danger btn-mini">{{=T("remove")}}</button>
+                        {{pass}}
+                    </li>
+                    <br>
+                    <form class="role_team">
+                        <label>
+                            <strong>{{=T("Manage User")}}</strong><br />
+                            {{=T("What role this person will perform in the project?")}}
+                        </label>
+                        {{ for role in roles: }}
+                            {{ if member.role_id:}}
+                                <input type="radio" name="{{=member.person_id}}" value="{{=role.id}}"
+                                    {{if member.role_id.name == role.name:}}checked="checked"{{pass}}
+                                >{{=role.name}}<br />
+                            {{else:}}
+                                <input type="radio" name="{{=member.person_id}}" value="{{=role.id}}" >{{=role.name}}<br />
+                            {{ pass }}
                         {{ pass }}
-                    {{ pass }}
-                    <input type="submit" value="OK" class="btn">
-                    <button id="cancel" class="btn">{{=T("Cancel")}}</button>
-                </form>
+                        <input type="submit" value="OK" class="btn">
+                        <button id="cancel" class="btn">{{=T("Cancel")}}</button>
+                    </form>
+                </ul>
 
                 {{ pass }}
             {{pass}}
-        </ul>
-        </div>
-    </div><!--/row-->
+    </div><!--/span5-->
 </div><!--/container-fluid-->
